tests/snapshots/apply_output__output_matches_snapshot__clean_up_default_reports_only_the_summary.snap
---
source: tests/apply_output.rs
expression: captured
---
deployed 0, replaced 1, skipped 0, removed 1, pruned 0
