tests/snapshots/apply_output__output_matches_snapshot__clean_up_verbose_reports_removed_entries_and_summary.snap
---
source: tests/apply_output.rs
expression: captured
---
replaced <root>/target/file1
removed <root>/target/file2
deployed 0, replaced 1, skipped 0, removed 1, pruned 0
