tests/snapshots/apply_output__output_matches_snapshot__fresh_verbose_prints_per_path_lines_and_summary.snap
---
source: tests/apply_output.rs
expression: captured
---
deployed <root>/target/file1
deployed <root>/target/file2
deployed 2, replaced 0, skipped 0
