tests/snapshots/apply_output__output_matches_snapshot__prune_verbose_reports_pruned_parents_and_summary.snap
---
source: tests/apply_output.rs
expression: captured
---
removed <root>/target/dir1/sub1/file1
pruned <root>/target/dir1/sub1
pruned <root>/target/dir1
deployed 0, replaced 0, skipped 0, removed 1, pruned 2
